tests/NormalTests/paczka2/big_fuzzy/68262505.err
Error in line 3: ffud2 A276 92,0
Error in line 13: OmBavaokB9 S404 94,1
Error in line 33: S770 S404 3,6
Error in line 29: OmBavaokB9 A276 26,3
Error in line 41: uWT1RNg S404 86,0
Error in line 44: uWT1RNg S804 73,0
Error in line 55: S770 A276 55,9
Error in line 75: ffud2 A276 0,6
Error in line 74: OmBavaokB9 A276 3,0
Error in line 79: uWT1RNg S404 66,0
Error in line 67: S770 S404 83,0
Error in line 83: OmBavaokB9 A276 83,67
Error in line 80: OmBavaokB9 S404 48,5
Error in line 84: OmBavaokB9 A276 374,1
Error in line 78: ffud2 S770 694,5
Error in line 90: ffud2 S404 58,3
Error in line 89: OmBavaokB9 S770 17,5
Error in line 109: OmBavaokB9 S804 52,9
Error in line 130: dyi A276 37,6
Error in line 125: ffud2 S770 25,4
Error in line 132: dyi S804 81,9
Error in line 133: ffud2 S804 99,5
Error in line 138: uWT1RNg S0 110,8
Error in line 153: S770 S770 51,8
Error in line 148: ffud2 S770 129,4
Error in line 136: uWT1RNg S404 32,2
Error in line 167: dyi S804 46,3
Error in line 156: ffud2 A276 12,7
Error in line 173: ffud2 S770 30,1
Error in line 175: ffud2 S804 30,4
Error in line 176: ffud2 S404 72,7
Error in line 178: ffud2 S770 77,7
Error in line 187: S770 S770 31,8
Error in line 199: dyi A276 32,6
Error in line 206: dyi S404 15,3
Error in line 241: OmBavaokB9 S770 70,6
Error in line 225: uWT1RNg S804 36,1
Error in line 240: dyi S804 64,6
Error in line 243: uWT1RNg A276 55,1
